--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 　<body>
 　<script type="text/JavaScript">
 　<!-- 
-　document.write("劉宜軒") 
+　document.write("劉宜軒")
+  document.write("謝謝親愛的組員們><")
 　//-->
 　</script>
 　</body>
