--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 　<body>
 　<script type="text/JavaScript">
 　<!-- 
-　document.write("劉宜軒\n")
+　document.write("劉宜軒  ")
   document.write("謝謝親愛的組員們><")
 　//-->
 　</script>
