--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <html>
-　<body>
+<head>
+  <title>我的第一個樣式頁面</title>
+</head>
+<body>
 　<script type="text/JavaScript">
-　<!-- 
-　document.write("劉宜軒  ")
+　<!--目錄 -->
+  
+   
+ <!-- 主要內容 -->
+ <h1>我的第一個樣式頁面</h1>
+ <p>歡迎來到我的樣式頁面!</p>
+ <p>Just example
+ 
+  document.write("劉宜軒  ")
   document.write("謝謝親愛的組員們><")
-　//-->
+　
 　</script>
+  <!-- 簽名和日期 -->
+  <address>2017/9/18</address>
 　</body>
 </html>
