--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <title>我的第一個樣式頁面</title>
 </head>
 <body>
-　<script type="text/JavaScript">
+//　<script type="text/JavaScript">
 　<!--目錄 -->
   
    
  <!-- 主要內容 -->
  <h1>我的第一個樣式頁面</h1>
  <p>歡迎來到我的樣式頁面!</p>
- <p>Just example
+ <p>Just example</p>
  
-  document.write("劉宜軒  ")
-  document.write("謝謝親愛的組員們><")
+//  document.write("劉宜軒  ")
+ // document.write("謝謝親愛的組員們><")
 　
-　</script>
+　//</script>
   <!-- 簽名和日期 -->
   <address>2017/9/18</address>
 　</body>
