--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
  <p>歡迎來到我的樣式頁面!</p>
  <p>Just example</p>
  
-//  document.write("劉宜軒  ")
- // document.write("謝謝親愛的組員們><")
+  document.write("劉宜軒  ")
+  document.write("謝謝親愛的組員們><")
 　
 　
   <!-- 簽名和日期 -->
