--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>我的第一個樣式頁面</title>
+  <title>掌心的餘溫</title>
 </head>
 <body>
 　
@@ -11,9 +11,9 @@
  <h1>我的第一個樣式頁面</h1>
  <p>歡迎來到我的樣式頁面!</p>
  <p>Just example</p>
- 
-  document.write("劉宜軒  ")
-  document.write("謝謝親愛的組員們><")
+ <p>劉宜軒
+ <p>謝謝親愛的組員們><
+  
 　
 　
   <!-- 簽名和日期 -->
