--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   
    
  <!-- 主要內容 -->
- <h1>我的第一個樣式頁面</h1>
- <p>歡迎來到我的樣式頁面!</p>
- <p>Just example</p>
+ <h1>掌心的餘溫</h1>
+ <p>歡迎來到新楓之谷 星光精靈伺服器 最棒公會小天地!</p>
+ <p>87會長:韓凜玥x</p>
  <p>劉宜軒
  <p>謝謝親愛的組員們><
   
