--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
 <head>
   <title>掌心的餘溫</title>
+  <style type="text/css">
+    body{
+      color: purple;
+      background-color: #d8da3d }
+  </style>
 </head>
 <body>
 　
