--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 　
 　<!--目錄 -->
   <u1 class="photo">
-    <li><a href="D:\Desktop\圖片\閃照(芝芝&疙瘩)"></a>
+    <li><a href="D:\Desktop\圖片\photo1"></a>
   
    
  <!-- 主要內容 -->
