--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 　
 　<!--目錄 -->
   <u1 class="photo">
-    <li><a href="D:\Desktop\picture\photo1">閃照(芝芝&疙瘩)</a>
+    <li><a href=https://github.com/okm15977/website/blob/master/photo1.jpg">閃照(芝芝&疙瘩)</a>
   
    
  <!-- 主要內容 -->
