--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 　
 　<!--目錄 -->
   <u1 class="photo">
-    <li><a href=file:///d/desktop/picture/photo1.jpg>閃照(芝芝&疙瘩)</a>
+    <li><a href="https://github.com/okm15977/website/blob/master/photo1.jpg">閃照(芝芝&疙瘩)</a>
+    <li><a href="https://github.com/okm15977/website/blob/master/photo2.jpg">家族照(芝芝&疙瘩&多多)</a>
+    <li><a href="https://github.com/okm15977/website/blob/master/photo3.jpg">雙胞胎(芝芝&薯片)</a>
   
    
  <!-- 主要內容 -->
