--- a/index.html
+++ b/index.html
@@ -2,14 +2,23 @@
 <head>
   <title>掌心的餘溫</title>
   <style type="text/css">
+    h2{
+      color: blue;
+    }
     body{
       color: purple;
       background-color: #d8da3d }
   </style>
 </head>
 <body>
+　<!--自我介紹 -->
+  <h2>我的名字是 劉宜軒 </h2>
+  <h2>目前為電機二年級  </h2>
+  <h2>沒有任何有關網頁設計的經驗 </h2>
+  <h2>這我也是第一次自己寫網頁xD </h2>
+  <h2>下方是有關遊戲的內容(助教可以不要看)~ </h2>
 　
-　<!--目錄 -->
+  <!--目錄 -->
   <u1 class="photo">
     <li><a href="https://github.com/okm15977/website/blob/master/photo1.jpg">閃照(芝芝&疙瘩)</a>
     <li><a href="https://github.com/okm15977/website/blob/master/photo2.jpg">家族照(芝芝&疙瘩&多多)</a>
