--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <h2>我的名字是 劉宜軒 </h2>
   <h2>目前為電機二年級  </h2>
   <h2>沒有任何有關網頁設計的經驗 </h2>
-  <h2>這我也是第一次自己寫網頁xD </h2>
+  <h2>這是我第一次自己寫網頁xD </h2>
+  <h2>但儘管沒有經驗 </h2>
+  <h2>我就像亢奮的海綿，會用力吸收教授有趣的教學內容 </h2>
   <h2>下方是有關遊戲的內容(助教可以不要看)~ </h2>
 　
   <!--目錄 -->
